// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow singleTags template escapes HTML special characters in template 1`] = `
Object {
  "attributes": Object {
    "data-is": Array [
      "tag",
    ],
  },
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [],
      "name": "p",
    },
  ],
  "name": "tag",
}
`;

exports[`shallow singleTags template extracts template 1`] = `
Object {
  "attributes": Object {
    "data-is": Array [
      "tag",
    ],
  },
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [],
      "name": "p",
    },
  ],
  "name": "tag",
}
`;

exports[`shallow singleTags template renders ignoring style 1`] = `
Object {
  "attributes": Object {
    "data-is": Array [
      "static",
    ],
  },
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [],
      "name": "p",
    },
  ],
  "name": "static",
}
`;

exports[`shallow singleTags template renders static tag 1`] = `
Object {
  "attributes": Object {
    "data-is": Array [
      "static",
    ],
  },
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [],
      "name": "p",
    },
  ],
  "name": "static",
}
`;

exports[`shallow singleTags template template "each" work 1`] = `
Object {
  "attributes": Object {
    "data-is": Array [
      "tag",
    ],
  },
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [],
      "name": "p",
    },
    Object {
      "attributes": Object {},
      "children": Array [],
      "name": "p",
    },
    Object {
      "attributes": Object {},
      "children": Array [],
      "name": "p",
    },
  ],
  "name": "tag",
}
`;
